-----------
v3.0.0beta2
-----------

[mms] Initial implementation of smartmobile view.
[mms] Disable blacklist, vacation, and whitelist API methods if the preference
      is locked.


-----------
v3.0.0beta1
-----------

[jan] Update icon set.
[mms] Fix javascript actions on the vacation page.


------------
v3.0.0alpha1
------------

First alpha release for Horde 5.
[mms] When adding to blacklist/whitelist, remove added addresses from the
      other list.
[jan] Allow to use placeholder variables in vacation messages (Request #10316).
[mjr] Add ability to retrieve vacation message details from the API.
[jan] Validate start and end dates of vacation rules (Request #10879).


-------
v2.0.10
-------
[mms] Don't allow a user to save a rule with no matching conditions.


------
v2.0.9
------

[mms] Fix patch for filtering on combination fields (Bug #11197).
[mms] Procmail driver now explicitly sets the base Maildir directory by default
      (Bug #10113).
[jan] Update Turkish translation (İstanbul Technical University).


------
v2.0.8
------

[jan] Update Swedish translation (Per Olof Ljungmark <peo@bsdlabs.com>).
[mms] Fix IMAP filtering on combination fields (Bug #11197).
[jan] Fix showing blacklist option to mark message as deleted (Bug #11186).
[jan] Update Italian translation (Massimo Malabotta <mmalabotta@units.it>).
[jan] Fix folder names in Procmail rules if using Maildir (Bug #10113).
[jan] Update Hungarian translation (Zoltán Németh <nemeth.zoltan@etit.hu>).
[mms] Application initialization should only be done on first access.


------
v2.0.7
------

[jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).
[jan] Set Return-Path: in Maildrop vacation driver (rsalmon@mbpgroup.com, Bug
      #10568).


------
v2.0.6
------

[mms] Fix displaying From address in notification when filtering with IMAP
      driver.
[jan] Catch if files don't exist while deleting with VFS transport
      (michael-dev@fami-braun.de, Bug #10494).